# ls1-drinks-accounting

./: .env  .env.production  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  index.html  package-lock.json  package.json  sqlx-data.json
.github/: dependabot.yaml
.github/workflows/: build.yaml  check.yaml
LS1DrinksAccounting/: ContentView.swift  Info.plist  LS1DrinksAccountingApp.swift
LS1DrinksAccounting.xcodeproj/: project.pbxproj
LS1DrinksAccounting/Config/: debug.xcconfig
LS1DrinksAccounting/Model/: Item.swift  Model.swift  Person.swift  (+2 more)
backend/: .gitignore  Cargo.toml  Dockerfile  build.rs  postgres-dev.yaml  sqlx-data.json
backend/.github/workflows/: build.yaml
backend/.sqlx/: query-01295a78a2e0470cb297b48dfb96103d3abe33bb05130c1de3d37ce20c6d3b86.json  query-165e0c5fdd23c8cccee20c023f65dd4939c15a878fb06df4bfe68ece4b11007d.json  query-17dd7fb8a40b43c6250b6e6c00b482fa8d88676b70ecc76c14f0205e50b4345b.json  query-1aaa04d38e6a71e6cd38d27f6ed67591920cab3c29184972f865df7f4d2903ad.json  query-277bde191c80b37928ab9a12c616ac5b42380b8d4cfd5459b691ed95c3400ac2.json  query-27aef00b68a52f4ec0314cb4f28da237b88a6c1e103ca3cff3f80d8bc0451452.json  query-2a41082136af456a3e202828ef0fd9f33dd3449556c66b291c9f85fc8b77bd5e.json  query-37fa3b5306f954b757b940bf057a37b22de0bb581945888baad711e5a15f78f6.json  query-45c0a9c7598eea902d3e0c28cd91d7340e064ced5e6ce6f092839af50aca2215.json  query-565ad76bbc0638a42e4756d529074c2a3c1477e2e0c74dd57be44a73bea344ea.json  query-5d861d0ae1203afd870d1bde036cc1c1c6f337681b0f3e90a673e44e2618df01.json  query-62dfb18106be3b4fe4783e241c003fb80fe9b2371db55e0fd6cfef82d03b2216.json  query-683a87a2be11884847dbbf208eea7cbb803e9e3e8213490b748f2c25c1119e4e.json  query-6dd548893f1532555e48963fee75ea700a7a78b58ee0a2839a82df318dd1bcb0.json  query-6e90206ec64ec5a53643ed840ec5b222d3c70f34ca59ccfe28c46561bf9c190c.json  query-6f7de21bc86be96773d14d18d6d4ff73b60e10a49e526131eca743ce1773d318.json  query-7ab715c59780e31f4aecfa75f716e5ceb6e234919bd9e3f34fdf9ec64da909a7.json  query-7ad49bafc65ad86116bc19e9a60cbfbd2c10bfa32b75a1e71d25523bb66cd505.json  query-8891e6cbe5657f8b630271369c18004962a2de7260ed38e4dceac42387e29eb6.json  query-ac905f52f9a44dfd4aabcf14880998005e85438048a824538fdc16727a2e129d.json  query-b8517c0d3e43e063cb3846aeb16ecaaffb67ec85f2d0d0083a3ae06e15ef471a.json  query-bc644b4f86cb4a861820e85ee62776818b66c3c9945ca03c9fc0666b400d9716.json  query-bfba7713dda63a50e456841735cbda615584b469d6b957d1b0c1576caa1b516d.json  query-c27d817fbd0335f904e05bb645079ad453bf4db3acc04b39e042dff1a65140a1.json  query-cfdce804308fe50e3932e1adaafb4087518a706cef0940e2acde6450246a4f7b.json  query-d915699be6ecbfb13aa1f8ab65e18d37f8ea9323c6c84cfcad950b9e683973ed.json  query-dd9745e2339e018277ffff2986b1ca9a0d5780ecdfa830708802d34f42a20259.json  query-df7ff37c9a8eca309d28d76624b7e337bd95997554cce4c89eef6fd59228c1b7.json  query-e3bcc374af09e4c0bdb1e65827e0f8b06eb5787123ea4534290fdfba52f9b984.json  query-e4bcc2b98aadbc1f5b81fcd56f41fc8870b75091d37f2fb67f6165a4952d9cfc.json  query-e54d956b911c7c9760e566e744592efc3f2d1a8a50a8b8ef9ff98113805810b2.json  query-ebb90bbcd0d0df7f7e040e9376a552eaf27fd455f89a0ec11abc8111845f69db.json  query-f00e81533c9c46e5adaeaae76881c6df9bf787a477c2476c7d50e47bd072eba0.json  query-f5cab6ec7c4b0986f95f0b0e93eea787d2ada600583ba8dd6b2ac239b71df4a4.json  query-f9b0e89a9f5d19ac22fe2df9438545ccf834cd16cccbe0b1961a82c60fac499e.json
backend/migrations/: 1_setup.sql  2_update_user_pin.sql  4_app_version_default_value.sql  5_delete_users.sql  6_drink_restocks.sql  7_drink_deleted.sql  8_transactions_user_date_indexes.sql
backend/scripts/: insert-random-transactions.sh  insert-random-transactions.sql  populate-dev-db.sh  populate-dev-db.sql
backend/src/: config.rs  main.rs
backend/src/db/: app_configuration.rs  auth.rs  drinks.rs  errors.rs  health.rs  mod.rs  transactions.rs  users.rs
backend/src/http/: app_configuration.rs  auth.rs  drinks.rs  errors.rs  extractors.rs  health.rs  mod.rs  stats.rs  users.rs
backend/src/mail/: mod.rs
backend/src/types/: app_configuration.rs  auth.rs  mod.rs  stats.rs
backend/src/utils/: jwt.rs
dashboard/: nginx.conf  package-lock.json  package.json  tsconfig.json
fastlane/: Appfile  Fastfile  README.md  report.xml
ios/: .gitignore  README.md
migrations/: 1_setup.sql  3_app_version.sql
src/: App.vue  config.rs  main.rs  main.ts
web/: .dockerignore  Dockerfile  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json  svelte.config.js
(+121 files in other folders)
