[package]
name = "drinks-accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["tower-log"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.2.2", features = ["v4", "serde", "macro-diagnostics"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
time = "0.3.17"
dotenv = "0.15.0"
env_logger = "0.10.0"
anyhow = "1.0.48"
log = "0.4.17"
clap = { version = "4.0.29", features = ["derive", "env"] }
tower-http = { version = "0.3.5", features = ["trace"] }
axum-debug = "0.3.3"
