[package]
name = "drinks-accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["tower-log"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde", "macro-diagnostics"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
time = "0.3.30"
dotenv = "0.15.0"
env_logger = "0.10.0"
anyhow = "1.0.75"
log = "0.4.20"
clap = { version = "4.4.6", features = ["derive", "env"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
rand = "0.8.5"
rust-argon2 = "2.0.0"
jsonwebtoken = "8.3.0"
chrono = { version = "0.4.31", features = ["serde"] }
axum-macros = "0.3.8"
semver = { version = "1.0.19", features = ["serde"] }
lettre = "0.10.4"
futures = "0.3.28"
itertools = "0.11.0"
tokio-cron-scheduler = "0.9.4"
