[package]
name = "drinks-accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["tower-log"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.6.1", features = ["v4", "serde", "macro-diagnostics"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
time = "0.3.30"
dotenv = "0.15.0"
env_logger = "0.11.3"
anyhow = "1.0.75"
log = "0.4.20"
clap = { version = "4.4.11", features = ["derive", "env"] }
tower-http = { version = "0.5.0", features = ["trace", "cors"] }
rand = "0.8.5"
rust-argon2 = "2.0.0"
jsonwebtoken = "9.2.0"
chrono = { version = "0.4.31", features = ["serde"] }
axum-macros = "0.4.0"
semver = { version = "1.0.20", features = ["serde"] }
lettre = "0.11.2"
futures = "0.3.29"
itertools = "0.13.0"
tokio-cron-scheduler = "0.10.2"
