[package]
name = "drinks-accounting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", features = ["tower-log"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde", "macro-diagnostics"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
time = "0.3.41"
dotenv = "0.15.0"
env_logger = "0.11.8"
anyhow = "1.0.98"
log = "0.4.27"
clap = { version = "4.5.38", features = ["derive", "env"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
rand = "0.8.5"
rust-argon2 = "2.1.0"
jsonwebtoken = "9.3.1"
chrono = { version = "0.4.41", features = ["serde"] }
axum-macros = "0.4.2"
semver = { version = "1.0.26", features = ["serde"] }
lettre = "0.11.16"
futures = "0.3.31"
itertools = "0.13.0"
tokio-cron-scheduler = "0.10.2"
